--- a/.golangci.yml
+++ b/.golangci.yml
@@ -77,6 +77,7 @@ linters:
 issues:
     max-issues-per-linter: 0
     max-same-issues: 0
+    exclude-dirs-use-default: true
     exclude:
         - abcdef
     exclude-rules:
@@ -135,6 +136,11 @@ issues:
     exclude-dirs:
         - ^internal/
         - ^querybuilder/
+        - ^dagger/
+        - ^telemetry/
+        - ^.devenv/
+        - ^.direnv/
+        - ^.aider.tags.cache.v3
     exclude-files:
         - ^querybuilder/.+\.go
         - dagger.gen.go
