refactor: adjust golangci-lint in github actions

--- a/.github/workflows/mod-module-template-ci.yaml
+++ b/.github/workflows/mod-module-template-ci.yaml
@@ -85,6 +85,9 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     golangci-lint:
+        defaults:
+            run:
+                working-directory: module-template
         strategy:
             matrix:
                 go: ['1.22']
