--- a/.github/workflows/mod-module-template-ci.yaml
+++ b/.github/workflows/mod-module-template-ci.yaml
@@ -109,7 +109,7 @@ jobs:
               uses: golangci/golangci-lint-action@v6
               with:
                   version: v1.59
-                  args: --config ../.golangci.yml --verbose
+                  args: --verbose
                   working-directory: module-template
 
       # Dagger test module 🧪 (develop & golang ci-lint)
