--- a/.github/workflows/mod-module-template-ci.yaml
+++ b/.github/workflows/mod-module-template-ci.yaml
@@ -105,12 +105,24 @@ jobs:
                   version: ${{ matrix.dagversion }}
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+          # Install golangci-lint using curl
+            - name: Install golangci-lint
+              run: |
+                curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s latest
+                sudo mv ./bin/golangci-lint /usr/local/bin/golangci-lint
+
             - name: Run golangci-lint on module-template 📦
-              uses: golangci/golangci-lint-action@v6
-              with:
-                  version: v1.59
-                  args: --verbose
-                  working-directory: module-template
+              run: |
+                cd module-template
+                golangci-lint run --config=../.golangci.yml --verbose
+
+#            - name: Run golangci-lint on module-template 📦
+#              uses: golangci/golangci-lint-action@v6
+#              with:
+#                  version: v1.59
+#                  args: --verbose
+#                  working-directory: module-template
 
       # Dagger test module 🧪 (develop & golang ci-lint)
             - name: Dagger Develop on Module tests 🧪 module-template with Dagger ${{ matrix.dagversion }}
