--- a/.github/workflows/mod-module-template-ci.yaml
+++ b/.github/workflows/mod-module-template-ci.yaml
@@ -17,16 +17,12 @@ permissions:
     pull-requests: read
     checks: write
 
-defaults:
-    run:
-        working-directory: module-template
-
 jobs:
     dagger-linter:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3]
+                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3, 0.12.4]
         name: Lint module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
         steps:
@@ -150,7 +146,7 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3]
+                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3, 0.12.4]
         needs: [dagger-linter, golangci-lint]
         name: Run Tests 🧪 in module-template on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
@@ -185,11 +181,11 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    module-templates-go:
+    module-templates-recipes-go:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3]
+                dagversion: [0.12.4]
         needs: [dagger-linter, golangci-lint]
         name: Run recipes 🥗 in module-template/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
