--- a/.github/workflows/mod-module-template-ci.yaml
+++ b/.github/workflows/mod-module-template-ci.yaml
@@ -201,7 +201,7 @@ jobs:
         strategy:
             matrix:
                 go: ['1.22']
-                dagversion: [0.12.0, 0.12.1, 0.12.2, 0.12.3, 0.12.4]
+                dagversion: [0.12.4]
         needs: [dagger-linter, golangci-lint]
         name: Run recipes 🥗 in module-template/examples/go on ${{ matrix.os }} with Dagger ${{ matrix.dagversion }}
         runs-on: ubuntu-latest
