fix: Update module selection in generate-new-versions workflow
Updated the module selection in the generate-new-versions workflow to use the ${{ fromJson(needs.detect-modules.outputs.changed_modules) }} syntax instead of the ${{ fromJSON(needs.detect-modules.outputs.changed_modules) }} syntax. This ensures that the workflow correctly selects the changed modules for processing.

--- a/.github/workflows/generate-new-versions.yaml
+++ b/.github/workflows/generate-new-versions.yaml
@@ -45,7 +45,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        module: [${{ fromJSON(needs.detect-modules.outputs.changed_modules) }}]
+        module: ${{ fromJson(needs.detect-modules.outputs.changed_modules) }}
     steps:
       - uses: actions/checkout@v4
         with:
