ci/publish-dagger-modules (#128)
* feat: Implement automated publishing for Dagger modules

This commit introduces a new GitHub Actions workflow that automates the publishing of Dagger modules to the Daggerverse. The key changes are:

- Add a new GitHub Actions workflow file `.github/workflows/publish-dagger-modules.yml` that is triggered on the creation of a new tag matching the pattern `*/v*.*.*`.
- The workflow detects all Dagger modules in the repository by searching for directories containing a `dagger.json` file.
- If the workflow is triggered by a tag push, it will only publish the module associated with the tag. Otherwise, it will publish all detected modules.
- The workflow sets up the required Go environment and uses the Dagger CLI to develop and publish the identified modules to the Daggerverse.
- The workflow includes a failure notification step to inform the repository maintainers if any issues occur during the publishing process.

* ci: Improve module version bumping workflow

This commit updates the `bump-dagger-module-versions.yml` GitHub Actions
workflow to improve the module version bumping process. The key changes are:

1. Add the `GITHUB_TOKEN` secret to the workflow to enable pushing new tags.
2. Configure the Git user name and email for the GitHub Actions bot.
3. Introduce a new step to configure Git before bumping versions and
   creating new tags.
4. Enhance the module version bumping logic to handle cases where the
   target tag already exists, skipping its creation.

These changes ensure that the workflow can successfully bump and push
new module versions without any issues.

* ci: Bump module versions based on changes

The commit updates the GitHub Actions workflow to automatically bump the version of Dagger modules based on the changes detected in the codebase. The key changes are:

- Detect the modules with changes using the `detect-modules` job.
- If any modules have changes, the `bump-version` job is execu

--- a/.github/workflows/bump-dagger-module-versions.yml
+++ b/.github/workflows/bump-dagger-module-versions.yml
@@ -1,3 +1,4 @@
+---
 name: Bump Dagger Module Versions 🚀
 
 on:
@@ -64,11 +65,17 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Semver Tool
         run: |
           curl -L https://github.com/fsaintjacques/semver-tool/archive/master.tar.gz | tar xz
           sudo cp semver-tool-master/src/semver /usr/local/bin/
+
+      - name: Configure Git
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
       - name: Bump Version and Tag
         run: |
@@ -98,3 +105,4 @@ jobs:
           done
         env:
           bump: ${{ inputs.bump || 'minor' }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
