feat: Update Dagger module publishing workflow
# Description

1. Removed the `dagger -m $module develop --cloud-token ${{ secrets.DAGGER_CLOUD_TOKEN }}` step as it is no longer necessary for publishing modules.
2. Simplified the `dagger publish -m $module` command to publish the modules to the Daggerverse.
3. Removed the `Taskfile.dagger.yml` file as the publish functionality has been consolidated into the GitHub Actions workflow.

This change streamlines the Dagger module publishing process by removing unnecessary steps and simplifying the command used to publish the modules.

--- a/.github/workflows/publish-dagger-modules.yml
+++ b/.github/workflows/publish-dagger-modules.yml
@@ -80,11 +80,8 @@ jobs:
             dagger_version=$(jq -r '.sdk // empty' "$module/dagger.json")
             dagger_version=${dagger_version:-$DAG_VERSION}
 
-            echo "Developing module $module with Dagger $dagger_version"
-            dagger -m $module develop --cloud-token ${{ secrets.DAGGER_CLOUD_TOKEN }}
-
             echo "Publishing $module to Daggerverse"
-            dagger -m $module publish --cloud-token ${{ secrets.DAGGER_CLOUD_TOKEN }}
+            dagger publish -m $module
           done
 
       - name: Notify on failure
