fix: Disable automatic version bumping on push events
The changes made in this commit are to disable the automatic version bumping of the Dagger module on push events. This is done by commenting out the `push` event trigger in the workflow file. This change is made to prevent unnecessary version bumps during development and testing, and to only trigger the version bump when a pull request is closed.

--- a/.github/workflows/bump-dagger-module-versions.yml
+++ b/.github/workflows/bump-dagger-module-versions.yml
@@ -5,9 +5,10 @@ on:
   pull_request:
     types: [closed]
   workflow_dispatch:
-  push:
-    branches:
-      - '**'
+#  Only for torubleshooting purposes, uncomment the following lines
+#  push:
+#    branches:
+#      - '**'
 
 permissions:
   contents: write
