publish-and-bump-dagger-modules (#134)
* ci: Add new workflow to publish and bump Dagger modules

This commit adds a new GitHub Actions workflow named "Publish and Bump Dagger Modules" that allows manually triggering the publication and version bump of Dagger modules.

The key changes include:

- Add a new workflow file `.github/workflows/bump_and_publish_manual.yml` to handle the manual publication and version bump of Dagger modules.
- The workflow is triggered manually using the `workflow_dispatch` event.
- It identifies all Dagger modules in the repository, validates the user-provided module input, and processes the target modules.
- For each target module, it checks if there are changes, retrieves the latest tag, bumps the version based on the user input, creates and pushes a new tag, and publishes the module to the Daggerverse.
- The workflow provides appropriate feedback and error handling throughout the process.

* fix: Disable automatic version bumping on push events

The changes made in this commit are to disable the automatic version bumping of the Dagger module on push events. This is done by commenting out the `push` event trigger in the workflow file. This change is made to prevent unnecessary version bumps during development and testing, and to only trigger the version bump when a pull request is closed.

* feat: Implement Dagger module publishing workflow

This commit introduces a new GitHub Actions workflow to automate the publishing of Dagger modules.

The key changes include:

- Add a new workflow named `publish-dagger-modules.yml` that runs on push events for tags matching the pattern `*/v*.*.*`.
- The workflow detects all Dagger modules in the repository, identifies the modules that need to be published based on the pushed tag, and publishes them using the Dagger CLI.
- The workflow sets up the required environment, installs the Dagger CLI, and manages the module publishing process.
- It also includes a step to notify on 

--- a/.github/workflows/cd-bump-dag-module-version.yml
+++ b/.github/workflows/cd-bump-dag-module-version.yml
@@ -1,13 +1,14 @@
 ---
-name: Bump Dagger Module Versions 🚀
+name: CD Bump Dagger Module Versions 🏷️
 
 on:
   pull_request:
     types: [closed]
   workflow_dispatch:
-  push:
-    branches:
-      - '**'
+#  Only for torubleshooting purposes, uncomment the following lines
+#  push:
+#    branches:
+#      - '**'
 
 permissions:
   contents: write
